--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ body {
     color: var(--text-color);
 }
 
+section {
+    min-height: 100vh;
+    padding: 10rem 9% 2rem;
+}
+
 .header {
     position: fixed;
     top: 0;
@@ -63,4 +68,10 @@ body {
     font-size: 3.6rem;
     color: var(--text-color);
     display: none;
+}
+
+.home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
