--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,3 +1,21 @@
-@media media-type and (media-feature) {
-    /* CSS styles to apply for this media query */
+@media (max-width: 1200px) {
+    html {
+        font-size: 55%;
+    }
+}
+
+@media (max-width: 991px) {
+    .header {
+        padding: 2rem 3%;
+    }
+
+    section {
+        padding: 10rem 3% 2rem;
+    }
+
+    .footer {
+        padding: 2rem 3%;
+    }
+
+
 }
