--- a/style.css
+++ b/style.css
@@ -44,10 +44,6 @@ section {
     justify-content: space-between;
     align-items: center;
     z-index: 100;
-    transition-delay: 0s;
-	transition-duration: 0.4s;
-	transition-property: all;
-	transition-timing-function: ease;
 }
 
 .header.sticky {
@@ -101,6 +97,22 @@ section {
     }
 }
 
+.navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 1rem 3%;
+    background: var(--bg-color);
+    border-top: .1rem solid rgba(0, 0, 0, .2);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+    display: none;
+}
+
+.navbar.active {
+    display: block;
+}
+
 .navbar a {
     font-size: 1.7rem;
     color: var(--text-color); /* Changed color property */
@@ -126,14 +138,27 @@ section {
 
 .home-img img {
     width: 35vw;
+    animation: floatImage 4s ease-in-out infinite;
 }
 
-.home content h3 {
+@keyframes floatImage {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-2.4rem);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+.home-content h3 {
     font-size: 3.2rem;
     font-weight: 700;
 }
 
-.home content h3:nth-last-of-type(2) {
+.home-content h3:nth-last-of-type(2) {
     margin-bottom: 2rem;
 }
 
@@ -141,13 +166,13 @@ span {
     color: var(--main-color);
 }
 
-.home content h1 {
+.home-content h1 {
     font-size: 5.6rem;
     font-weight: 700;
     line-height: 1.3;
 }
 
-.home content p {
+.home-content p {
     font-size: 1.6rem;
 }
 
@@ -202,7 +227,7 @@ span {
     width: 35vw;
 }
 
-.headiing {
+.heading {
     text-align: center;
     font-size: 4.5rem;
 }
@@ -294,3 +319,54 @@ span {
     font-size: 2.4rem;
     color: var(--second-bg-color);
 }
+
+
+.experince h2 {
+    margin-bottom: 5rem;
+
+}
+
+.section__text__p1 {
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+    color: rgb(85, 85, 85);
+  }
+
+.experience-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.experience-container .experience-box {
+    flex: 1 1 30rem;
+    background: var(--second-bg-color);
+    padding: 3rem 2rem 4rem;
+    border-radius: 2rem;
+    text-align: center;
+    border: .2rem solid var(--bg-color);
+}
+
+.experience-container .experience-box:hover {
+    border-color: var(--main-color);
+    transform: scale(1.02);
+}
+
+.experience-box i {
+    font-size: 7rem;
+    color: var(--main-color);
+}
+
+.experience-box h3 {
+    font-size: 2.6rem;
+}
+
+.experience-box p {
+    font-size: 1.6rem;
+    margin: 1rem 0 3rem;
+}
+
+
