--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -42,6 +42,10 @@
         box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
     }
 
+    .navbar.active {
+        display: block; /* Add this to display the navbar when the menu icon is clicked */
+    }
+
     .navbar a {
         display: block;
         font-size: 2rem;
