--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ section {
     left: 0;
     width: 100%;
     padding: 2rem 9%;
-    background: var(--bg-color);
+    background: #C88EA7;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -67,7 +67,7 @@ section {
     width: 40px; height: 40px; 
     background-color: #000; 
     border-radius: 4px; 
-    color: #FFF; 
+    color: #C88EA7; 
     font-size: 22px; 
     font-weight: 600; 
     text-align: center; 
@@ -99,6 +99,7 @@ section {
 
 .navbar a {
     font-size: 1.7rem;
+    font-weight: 600;
     color: var(--text-color); 
     margin-left: 4rem;
     transition: .3s;
@@ -106,7 +107,7 @@ section {
 
 .navbar a:hover,
 .navbar a.active {
-    color: var(--main-color);
+    color: var(--second-bg-color);
 }
 
 #menu-icon {
