--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@
 }
 
 :root {
-    --bg-color: #352F44;
-    --second-bg-color: #5C5470;
-    --text-color: white;
-    --main-color: #FF78F0;
+    --bg-color: #190019;
+    --second-bg-color: #3D053D;
+    --text-color: #FBE4D8;
+    --main-color: linear-gradient(to right, #DF45C6, #F066A6);
 }
 
 html {
@@ -55,26 +55,29 @@ section {
     text-transform: uppercase;
     font-size: 18px; 
     letter-spacing: 3px; 
-    color: white; display: flex; 
+    color: var(--text-color); 
+    display: flex; 
     align-items: center; 
 }
 
-.logo span { 
-    display:flex; 
-    align-items: center; 
-    justify-content: center; 
-    width: 40px; height: 40px; 
-    background-color: #000; 
-    border-radius: 4px; 
-    color: #FF78F0; 
-    font-size: 22px; 
-    font-weight: 600; 
-    text-align: center; 
-    margin-right: 12px; 
-  }
+.logo span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background:#DF45C6; /* Gradient background for the span */
+    border-radius: 4px;
+    color: ; /* Set text color to transparent */
+    font-size: 22px;
+    font-weight: 600;
+    -webkit-background-clip: var(--main-color); /* Apply gradient to text */
+    background-clip: var(--main-color); /* Apply gradient to text */
+    margin-right: 12px;
+}
 
 .logo:hover { 
-    color: #000;
+    background: linear-gradient(to right, #DF45C6, #F066A6);
     cursor: default; 
 }
 
@@ -85,7 +88,7 @@ section {
     right: 0;
     width: 100%;
     height: 100%;
-    background: black;
+    background: linear-gradient(to right, #DF45C6, #F066A6);
     animation: showRight 1s ease forwards;
     animation-delay: .4s;
 }
@@ -99,14 +102,21 @@ section {
 .navbar a {
     font-size: 1.7rem;
     font-weight: 600;
-    color: var(--text-color); 
+    color: var(--text-color);
     margin-left: 4rem;
     transition: .3s;
 }
 
 .navbar a:hover,
 .navbar a.active {
-    color: var(--main-color);
+    color: #DF45C6;
+}
+
+.multiple-text {
+    background: linear-gradient(to right, #DF45C6, #F066A6);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
 }
 
 #menu-icon {
@@ -154,11 +164,11 @@ span {
 .home-content h1 {
     font-size: 5.6rem;
     font-weight: 700;
-    line-height: 1.3;
+    line-height: 1.1;
 }
 
 .home-content p {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 }
 
 .social-media a {
@@ -168,10 +178,10 @@ span {
     width: 4rem;
     height: 4rem;
     background: transparent;
-    border: .2rem solid var(--main-color);
+    border: .2rem solid #DF45C6;
     border-radius: 50%;
     font-size: 2rem;
-    color: var(--main-color);
+    color: #DF45C6;
     margin: 3rem 1.5rem 3rem 0;
     transition: .5s ease;
 }
@@ -179,7 +189,7 @@ span {
 .social-media a:hover {
     background: var(--main-color);
     color: var(--second-bg-color);
-    box-shadow: 0 0 1rem var(--main-color);
+    box-shadow: 0 0 1rem #DF45C6;
 }
   
  
@@ -188,7 +198,7 @@ span {
     padding: 1rem 2.8rem;
     background: var(--main-color);
     border-radius: 4rem;
-    box-shadow: 0 0 1rem var(--main-color);
+    box-shadow: 0 0 1rem #DF45C6;
     font-size: 1.6rem;
     color: var(--second-bg-color);
     letter-spacing: .1rem;
