--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ section {
     justify-content: space-between;
     align-items: center;
     z-index: 100;
-    box-shadow: 0 8px 12px rgb(248, 71, 115); /* Adjust the shadow values as needed */
+    box-shadow: 0 4px 10px rgb(255, 106, 143); /* Adjust the shadow values as needed */
 }
 
 .header.sticky {
@@ -111,7 +111,7 @@ section {
 
 .navbar a:hover,
 .navbar a.active {
-    color: #DF45C6;
+    color:#F066A6;
 }
 
 .multiple-text {
@@ -180,7 +180,7 @@ span {
     width: 4rem;
     height: 4rem;
     background: transparent;
-    border: .2rem solid #DF45C6;
+    border: .2rem solid #F066A6;
     border-radius: 50%;
     font-size: 2rem;
     color: #DF45C6;
@@ -212,6 +212,8 @@ span {
     box-shadow: none;
 }
 
+/*---------ABOUT SECTION---------*/
+
 .about {
     display: flex;
     justify-content: center;
@@ -232,10 +234,15 @@ span {
 .about-content h2 {
     text-align: left;
     line-height: 1.2;
+    margin-top: .5vh;
 }
 
 .about-content h3 {
     font-size: 2.6rem;
+}
+
+.about-content h3 span {
+    color: #F066A6;
 }
 
 .about-content p {
@@ -243,53 +250,62 @@ span {
     margin: 2rem 0 3rem;
 }
 
-
-.below h2 {
-    margin-bottom: 5rem;
-}
-
-.below-container {
+/* Style for the tab links */
+.tab-titles {
     display: flex;
-    justify-content: center;
+    margin: 20px 0 40px; 
+}
+
+.tab-links {
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+    margin-right: 20px;
+    padding-right: 20px; 
+}
+
+.tab-links::after {
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #F066A6;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: .5s;
+}
+
+.tab-links.active-link::after {
+    width: 50%;
+}
+
+.tab-contents ul li {
+    list-style: none;
+    margin: 10px 0;
+    padding: 0;
+}
+
+.tab-contents ul li span {
+    color: var(--text-color);
+    font-size: 14px;
     align-items: center;
-    flex-wrap: wrap;
-    gap: 2rem;
-    margin: 3vh;
+    margin-bottom: 10px; 
 }
 
-.below-container .below-box {
-    width: 30rem; /* Set a fixed width */
-    height: 20rem; /* Set a fixed height */
-    background: #DF45C6;
-    padding: 2rem; /* Adjust padding as needed */
-    border-radius: 2rem;
-    text-align: center;
-    border: .2rem solid var(--bg-color);
+.tab-contents.active-tab {
+    display: block;
 }
 
-.below-container .below-box:hover {
-    border-color: var(--main-color);
-    transform: scale(1.02);
+.tab-contents i.bx-user {
+    font-size: 24px; 
+    margin-right: 10px; 
 }
 
-.below-box i {
-    font-size: 5rem; /* Reduce the icon size */
-    color: var(--main-color);
-}
 
-.below-box h3 {
-    font-size: 1.8rem; /* Reduce the heading size */
-    margin: 1rem 0; /* Reduce top and bottom margin */
-}
 
-.below-box p {
-    font-size: 1.4rem; /* Reduce the paragraph text size */
-    margin: 1rem 0; /* Reduce top and bottom margin */
-}
 
-.below-box .btn {
-    display: none; /* Hide the button */
-}
+
 
 
 .contact h2 {
