--- a/style.css
+++ b/style.css
@@ -253,8 +253,9 @@ span {
 /* Style for the tab links */
 .tab-titles {
     display: flex;
-    margin: 20px 0 40px; 
+    margin: 1px 0; 
 }
+
 
 .tab-links {
     font-size: 18px;
@@ -284,23 +285,51 @@ span {
     list-style: none;
     margin: 10px 0;
     padding: 0;
+    
+}
+
+
+.tab-contents ul li br {
+    display: none; /* Hide the default line break */
 }
 
 .tab-contents ul li span {
+    font-size: 18px; /* Adjust the font size of the text */
+}
+
+.tab-contents ul li::before {
+    content: '\A'; /* Use a CSS pseudo-element to create a line break effect */
+    white-space: pre; /* Preserve white space and line breaks */
+    font-size: 24px; /* Adjust the font size of the line break */
+}
+
+
+
+.tab-contents ul li span {
     color: var(--text-color);
-    font-size: 14px;
+    font-size: 15px;
     align-items: center;
     margin-bottom: 10px; 
+    vertical-align: middle;
+    color: #F066A6;
+    font-weight: 600;
 }
+
+
+
+.tab-contents i {
+    font-size: 20px; 
+    margin-right: 10px;
+    vertical-align: middle;
+    color: #F066A6;
+}
+
 
 .tab-contents.active-tab {
     display: block;
 }
 
-.tab-contents i.bx-user {
-    font-size: 24px; 
-    margin-right: 10px; 
-}
+
 
 
 
