--- a/style.css
+++ b/style.css
@@ -177,6 +177,51 @@ span {
     font-size: 1.8rem;
 }
 
+.contact-info {
+    margin-bottom: 0; /
+}
+
+.contact-info ul li span {
+    color: var(--text-color);
+    font-size: 1.6rem;
+    display: inline-block; 
+    vertical-align: middle;
+    margin-bottom: 5px;
+}
+
+.contact-info ul li a {
+    text-decoration: none; 
+    color: var(--text-color); 
+    font-size: 1.6rem;
+    transition: color 0.3s ease; 
+}
+
+/* Change the link color on hover */
+.contact-info ul li a:hover {
+    color: #F066A6; 
+}
+
+.contact-info ul li {
+    list-style: none;
+    margin: 10px 0;
+    padding: 0;
+    display: flex; 
+    align-items: center; 
+}
+
+
+.contact-info i {
+    font-size: 20px;
+    margin-right: 10px;
+    color: #F066A6;
+}
+
+
+
+.social-media {
+    margin-top: 0; 
+}
+
 .social-media a {
     display: inline-flex;
     justify-content: center;
@@ -197,6 +242,7 @@ span {
     color: var(--second-bg-color);
     box-shadow: 0 0 1rem #DF45C6;
 }
+
   
  
 .btn {
@@ -271,15 +317,16 @@ span {
 
 .about-content p {
     font-size: 1.6rem;
+    text-align: justify;
     margin: 2rem 0 3rem;
 }
+
 
 /* Style for the tab links */
 .tab-titles {
     display: flex;
     margin: 1px 0; 
 }
-
 
 .tab-links {
     font-size: 18px;
@@ -313,9 +360,6 @@ span {
     
 }
 
-
-
-
 .tab-contents ul li span {
     color: var(--text-color);
     font-size: 15px;
@@ -326,15 +370,12 @@ span {
     font-weight: 600;
 }
 
-
-
 .tab-contents i {
     font-size: 20px; 
     margin-right: 10px;
     vertical-align: middle;
     color: #F066A6;
 }
-
 
 .tab-contents.active-tab {
     display: block;
@@ -351,16 +392,24 @@ span {
 }
 
 .upper-title {
-    text-align: center; /* Center the text horizontally */
-    font-size: 24px; /* Adjust the font size as desired */
+    text-align: center; 
+    font-size: 20px;
+    letter-spacing: 5px;
     color: var(--text-color);
 }
 
 
-.projects h2 {
-    margin-bottom: 4rem;
-    color: #F066A6;
+
+.title {
+    text-align: center;
+    font-size: 4.5rem;
+    background: linear-gradient(45deg, #F066A6, #DF45C6);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    margin-bottom: 2rem;
 }
+
 
 .projects-container {
     display: grid;
@@ -409,11 +458,11 @@ span {
 }
 
 .projects-layer h4 {
-    font-size: 3.1rem;
+    font-size: 2.1rem;
 }
 
 .projects-layer p {
-    font-size: 2.3rem;
+    font-size: 2rem;
     margin: .3rem 0 1rem;
 }
 
@@ -436,6 +485,7 @@ span {
 
 
 /*---------CONTACT SECTION---------*/
+
 .contact h2 {
     margin-bottom: 3rem;
 }
@@ -476,6 +526,7 @@ span {
     margin-top: 2rem;
     cursor: pointer;
 }
+
 
 .footer {
     display: flex;
