--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     border: none;
     outline: none;
     scroll-behavior: smooth;
-    font-family: 'Poppins', sans-serif; /* Fixed font-family name */
+    font-family: 'Poppins', sans-serif;
 }
 
 :root {
@@ -40,12 +40,12 @@ section {
     left: 0;
     width: 100%;
     padding: 2rem 9%;
-    background: rgba(var(--bg-color), 0); /* Set the alpha value to 0 */
+    background: rgba(var(--bg-color), 0);
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 100;
-    box-shadow: 0 4px 10px rgb(255, 106, 143); /* Adjust the shadow values as needed */
+    box-shadow: 0 4px 10px rgb(255, 106, 143);
 }
 
 .header.sticky {
@@ -68,13 +68,13 @@ section {
     justify-content: center;
     width: 40px;
     height: 40px;
-    background:#DF45C6; /* Gradient background for the span */
+    background:#DF45C6;
     border-radius: 4px;
-    color: #FFFEC4; /* Set text color to transparent */
+    color: #FFFEC4;
     font-size: 22px;
     font-weight: 600;
-    -webkit-background-clip: var(--main-color); /* Apply gradient to text */
-    background-clip: var(--main-color); /* Apply gradient to text */
+    -webkit-background-clip: var(--main-color);
+    background-clip: var(--main-color);
     margin-right: 12px;
 }
 
@@ -263,6 +263,9 @@ span {
     box-shadow: none;
 }
 
+
+
+
 /*---------ABOUT SECTION---------*/
 
 .about {
@@ -407,7 +410,7 @@ span {
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 
@@ -415,7 +418,7 @@ span {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
-    gap: 2.5rem;
+    gap: 2rem;
 }
 
 .projects-container .projects-box {
@@ -485,17 +488,35 @@ span {
 
 
 /*---------CONTACT SECTION---------*/
+.title2 {
+    text-align: center;
+    font-size: 4.5rem;
+    background: linear-gradient(45deg, #F066A6, #DF45C6);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    margin-bottom: 2rem;
+}
+
 
 .contact h2 {
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
 }
+
 
 .contact form {
     max-width: 70rem;
     margin: 1rem auto;
     text-align: center;
     margin-bottom: 3rem;
+    animation: slideIn 1s ease-in-out; 
 }
+
+
+.contact form .btn:active {
+    transform: scale(0.95);
+}
+
 
 .contact form .input-box {
     display: flex;
@@ -512,7 +533,9 @@ span {
     background: var(--second-bg-color);
     border-radius: .8rem;
     margin: .7rem 0;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
 
 .contact form .input-box input {
     width: 49%;
@@ -523,13 +546,45 @@ span {
 }
 
 .contact form .btn {
-    margin-top: 2rem;
+    margin-top: 1rem;
     cursor: pointer;
+    transition: background-color 0.5s ease, color 0.5s ease, transform 0.5s ease;
+}
+
+.contact form .btn:active {
+    transform: scale(0.95);
+}
+
+.contact form .btn:hover {
+    background-color: linear-gradient(45deg, #F066A6, #DF45C6);
+    color: linear-gradient(45deg, #F066A6, #DF45C6);
+    transform: scale(1.1);
+    transition: background-color 0.5s ease, color 0.5s ease, transform 0.5s ease; 
+}
+
+.parent-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%; 
+}
+
+#msg {
+    color: #DF45C6;
+    margin-top: .5rem;
+    font-size: 2rem;
+    display: block;
+    justify-content: center; 
+    align-items: center; 
+    height: 100%;
 }
 
 
+
+/*---------FOOTER SECTION---------*/
 .footer {
     display: flex;
+    margin-top: 5rem;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
@@ -538,7 +593,7 @@ span {
 }
 
 .footer-text p {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
 
 }
 
@@ -560,54 +615,4 @@ span {
     font-size: 2.4rem;
     color: var(--second-bg-color);
 }
-
-
-.experince h2 {
-    margin-bottom: 5rem;
-
-}
-
-.section__text__p1 {
-    text-align: center;
-    font-size: 18px;
-    font-weight: 600;
-    color: rgb(85, 85, 85);
-  }
-
-.experience-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 2rem;
-}
-
-.experience-container .experience-box {
-    flex: 1 1 30rem;
-    background: var(--second-bg-color);
-    padding: 3rem 2rem 4rem;
-    border-radius: 2rem;
-    text-align: center;
-    border: .2rem solid var(--bg-color);
-}
-
-.experience-container .experience-box:hover {
-    border-color: var(--main-color);
-    transform: scale(1.02);
-}
-
-.experience-box i {
-    font-size: 7rem;
-    color: var(--main-color);
-}
-
-.experience-box h3 {
-    font-size: 2.6rem;
-}
-
-.experience-box p {
-    font-size: 1.6rem;
-    margin: 1rem 0 3rem;
-}
-
 
