--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,10 +1,12 @@
 @media (max-width: 1200px) {
+
     html {
         font-size: 55%;
     }
 }
 
 @media (max-width: 991px) {
+
     .header {
         padding: 2rem 3%;
     }
@@ -99,30 +101,34 @@
     .projects-container {
         grid-template-columns: repeat(2, 1fr);
     }
-    
-    
 }
 
-
-
 @media (max-width: 617px) {
+
     .projects-container {
         grid-template-columns: 1fr;
     }
+}
 
+@media (max-width: 550px) {
+    
+    .additional-content {
+        width: 515px;
+    }
 }
 
 @media (max-width: 450px) {
+
     html {
         font-size: 50%;
     }
-
     .contact {
         flex-basis: 100%;
     }
 }
 
 @media (max-width: 365px) {
+
     .home-img img {
         width: 90vw;
     }
