--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ section {
 }
 
 .home {
-    background-image: url('./assets/home\ bg.gif'); /* Replace with your GIF path */
+    background-image: url('./assets/bg\ gif.gif'); /* Replace with your GIF path */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -196,7 +196,6 @@ span {
     transition: color 0.3s ease; 
 }
 
-
 .contact-info ul li a:hover {
     color: #F066A6; 
 }
@@ -209,14 +208,11 @@ span {
     align-items: center; 
 }
 
-
 .contact-info i {
     font-size: 20px;
     margin-right: 10px;
     color: #F066A6;
 }
-
-
 
 .social-media {
     margin-top: 0; 
@@ -243,8 +239,6 @@ span {
     box-shadow: 0 0 1rem #DF45C6;
 }
 
-  
- 
 .btn {
     display: inline-block;
     padding: 1rem 2.8rem;
@@ -262,9 +256,6 @@ span {
 .btn:hover {
     box-shadow: none;
 }
-
-
-
 
 /*---------ABOUT SECTION---------*/
 
@@ -385,13 +376,11 @@ span {
 }
 
 
-
-
-
 /*---------PROJECTS SECTION---------*/
 
 .projects {
     background: var(--bg-color);
+    margin-bottom: 40px;
 }
 
 .upper-title {
@@ -400,8 +389,6 @@ span {
     letter-spacing: 5px;
     color: var(--text-color);
 }
-
-
 
 .title {
     text-align: center;
@@ -412,7 +399,6 @@ span {
     color: transparent;
     margin-bottom: 1rem;
 }
-
 
 .projects-container {
     display: grid;
@@ -437,7 +423,6 @@ span {
 .projects-box:hover img {
     transform: scale(1.1);
 }
-
 
 .projects-box .projects-layer {
     position: absolute;
@@ -498,6 +483,9 @@ span {
     margin-bottom: 2rem;
 }
 
+.contact {
+    background: var(--second-bg-color);
+}
 
 .contact h2 {
     margin-bottom: 2rem;
@@ -530,7 +518,7 @@ span {
     padding: 1.5rem;
     font-size: 1.6rem;
     color: var(--text-color);
-    background: var(--second-bg-color);
+    background: var(--bg-color);
     border-radius: .8rem;
     margin: .7rem 0;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -584,12 +572,12 @@ span {
 /*---------FOOTER SECTION---------*/
 .footer {
     display: flex;
-    margin-top: 5rem;
+    margin-top: 2rem;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     padding: 2rem 9%;
-    background: var(--second-bg-color);
+    background: var(--bg-color);
 }
 
 .footer-text p {
@@ -605,6 +593,7 @@ span {
     background: var(--main-color);
     border-radius: .8rem;
     transition: .5s ease;
+    margin-bottom: 20px;
 }
 
 .footer-iconTop a:hover {
